css/layout.css
/*
* Skeleton V1.2
* Copyright 2011, Dave Gamache
* www.getskeleton.com
* Free to use under the MIT license.
* http://www.opensource.org/licenses/mit-license.php
* 6/20/2012
*/

/* Table of Content
==================================================
	#Site Styles
	#Page Styles
	#Media Queries
	#Font-Face */

/* #Site Styles
================================================== */
html, body, input, textarea {
    height: 100%;
    font-family: roboto;
    font-size: 14px;
    color: #777777;
}

h1, h2, h3, h4, h5, h6 {
    font-family: roboto;
    font-weight: bold;
    color: #339999;
}

hr {
    color: #339999;
    background: #339999;
    height: 1px;
    margin-top: 30px;
    margin-bottom: 30px;
}

section img {
    display: inline;
}

nav {
    margin: 0 auto;
    margin-top: 1em;
    margin-bottom: 5em;
}

.button-link {
    display: inline-block;  
    text-indent: -99999px;
}

.button-link:hover {
    background-position: 0 0;
}

.work-link {
    display: block;
    text-indent: -99999px;
    width: 220px;
    height: 220px;
    margin-bottom: 10px;
}

.work-link:hover {
    background-position: 0 0;
}

nav a {
    margin-left: 16px;
    margin-right: 16px;
}

.align-right {
    float: right;
}

.container {
    min-height: 100%;
    height: auto !important;
    height: 100%;
    margin: 0 auto -73px;
}

.container:after {
    content: ".";
    display: block;
}

footer {
    height: 73px;
    text-align: center;
}

.home-nav {
    width: 154px;
    height: 157px;
    background: url('/images/jucelle-logo-w-hover.png') bottom;
}

.about-nav {
    width: 60px;
    height: 51px;
    background: url('/images/about-nav-w-hover.png') bottom;
}

.work-nav {
    width: 60px;
    height: 51px;
    background: url('/images/work-nav-w-hover.png') bottom;
}

.resume-nav {
    width: 60px;
    height: 51px;
    background: url('/images/resume-nav-w-hover.png') bottom;
}

.contact-nav {
    width: 60px;
    height: 51px;
    background: url('/images/contact-nav-w-hover.png') bottom;
}

.bfa2011 {
    background: url('/static/images/work/bachelor-of-finearts-w-hover.png') bottom;
}

.do-not-disconnect {
    background: url('/static/images/work/do-not-disconnect-w-hover.png') bottom;
}

.get-up {
    background: url('/static/images/work/get-up-w-hover.png') bottom;
}

.julson-bakeshop {
    background: url('/static/images/work/julson-bakeshop-w-hover.png') bottom;
}

.lol-wht {
    background: url('/static/images/work/lol-wht-w-hover.png') bottom;
}

.split-knuckle {
    background: url('/static/images/work/split-knuckle-w-hover.png') bottom;
}

.the-minis {
    background: url('/static/images/work/the-minis-w-hover.png') bottom;
}

.twirl-it {
    background: url('/static/images/work/twirl-it-w-hover.png') bottom;
}

.uconn-reads {
    background: url('/static/images/work/uconn-reads-w-hover.png') bottom;
}

.scroll-button {
    display: block;
    text-indent: -99999px;
    width: 130px;
    height: 64px;
    margin: 0 auto;
    background: url('/images/scroll-up-button-w-hover.png') bottom;
}

.scroll-button:hover {
    background-position: 0 0;
}

/* #Page Styles
================================================== */

.about article {
    padding-top: 10px;
}

.gallery img {
    margin-bottom: 10px;
}

.homepage-image {
    margin: 0 auto;
    display: block;
}

.skills img {
    margin-left: 20px;
}

.work-samples {
    margin-top: 20px;
    text-align: center;
}

.work-entry>h5 {
    text-align: center;
    margin-bottom: 10px;
}

.work-entry>p {
    text-align: left;
}

.work-entry img {
    padding-top: 10px;
    padding-bottom: 10px;
    display: block;
    margin: 0 auto;
}

.resume-icon {
    float: left;
    margin-top: 3px;
    margin-right: 5px;
}

.resume>article {
    margin-bottom: 2em;
}

.resume article>header {
    margin-bottom: 5px;
}

.resume h5 {
    display: inline;
}

.resume em {
    font-size: 11px;
}

.resume div {
    margin-bottom: 10px;
    font-weight: bold;
}

#pdf-download {
    margin: 0 auto;
    display: block;
}

.clear-margin {
    margin-bottom: 2em;
}

.resume p {
    font-weight: normal;
    margin-bottom: 0px;
}

.resume .title {
    padding-left: 25px;
}

.contact-form > * {
    display: block;
}

.send-button {
    margin: 0 auto;
    width: 115px;
    height: 60px;
    display: block;
    text-indent: -99999px;
    background: url('/images/send-button-w-hover.png') bottom;
}

.send-button:hover {
    background-position: 0 0;
}

/* #Media Queries
================================================== */

	/* Smaller than standard 960 (devices and browsers) */
	@media only screen and (max-width: 959px) {}

	/* Tablet Portrait size to standard 960 (devices and browsers) */
	@media only screen and (min-width: 768px) and (max-width: 959px) {}

	/* All Mobile Sizes (devices and browser) */
	@media only screen and (max-width: 767px) {}

	/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
	@media only screen and (min-width: 480px) and (max-width: 767px) {}

	/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
	@media only screen and (max-width: 479px) {}


/* #Font-Face
================================================== */
/* 	This is the proper syntax for an @font-face file
		Just create a "fonts" folder at the root,
		copy your FontName into code below and remove
		comment brackets */

	@font-face {
	    font-family: roboto;
	    src: url('../fonts/Roboto-Regular.ttf');
	    font-weight: normal;
	    font-style: normal; }

  @font-face {
      font-family: roboto;
      src: url('../fonts/Roboto-Bold.ttf');
      font-weight: bold;
      font-style: normal; }

